# GB_compilers_2023

./: .gitignore  CMakeLists.txt  Makefile
P2/: README.md
P2/apps/: CMakeLists.txt
P2/headers/: common.h  optional.h
P2/make/: placeholder
P2/resources/: keywords.txt  literals.txt  rules.txt  states.txt  types.txt
P2/src/: CMakeLists.txt  automata_sr.c  comments.c  lexer.c  parser.c  result.c
P2/test/: CMakeLists.txt
P3/apps/: main.c  main.h
P3/binaries/resources/: goto.txt  rules.txt
P3/headers/: automata_sr.h  common.h  parser.h  result.h  tokens.h
P3/resources/: goto.txt  rules.txt  states.txt
P3/src/: automata_sr.c  common.c  parser.c  result.c  tokens.c
P3/test/: testlib.c
apps/: CMakeLists.txt  main.c  main.h
binaries/resources/: identifier.txt  literals.txt  multiline_comments.txt  numbers.txt  special_char.txt  types.txt
headers/: automata.h  automata_sr.h  comments.h  common.h  foreach.h  format.h  lexer.h  optional.h  parser.h  tokens.h
resources/: automata.sr  identifier.txt  keywords.txt  multiline_comments.txt  my_test.c  numbers.txt  operators.txt  rules.txt  special_char.txt  tokens.c
src/: CMakeLists.txt  automata.c  automata_sr.c  comments.c  common.c  format.c  lexer.c  parser.c  tokens.c
